installer/manifests/keptn/uniform-distributors-openshift.yaml
---
## openshift-route-service: create.project
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-route-service-create-project-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:0.5.0.beta
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
