installer/manifests/keptn/api-gateway-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-nginx
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: api-gateway-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: api-gateway-nginx
    spec:
      containers:
        - name: api-gateway-nginx
          image: nginxinc/nginx-unprivileged:1.17.9
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf # mount api-nginx-config volume to /etc/nginx
              subPath: nginx.conf
              readOnly: true
              name: api-nginx-config
            - mountPath: /etc/nginx/keptn-endpoints.conf # mount api-nginx-config volume to /etc/nginx
              subPath: keptn-endpoints.conf
              readOnly: true
              name: api-nginx-config
            - mountPath: /etc/nginx/keptn-endpoints-pre-0-7.conf # mount api-nginx-config volume to /etc/nginx
              subPath: keptn-endpoints-pre-0-7.conf
              readOnly: true
              name: api-nginx-config
            - mountPath: /etc/nginx/keptn-endpoints-pre-1-0.conf # mount api-nginx-config volume to /etc/nginx
              subPath: keptn-endpoints-pre-1-0.conf
              readOnly: true
              name: api-nginx-config
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: api-nginx-config
          configMap:
            name: api-nginx-config # place ConfigMap `api-nginx-config` on /etc/nginx
      serviceAccountName: keptn-default

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-nginx
  namespace: keptn
  labels:
    run: api-gateway-nginx
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  selector:
    run: api-gateway-nginx
