installer/manifests/keptn/continuous-deployment.yaml
---
# gatekeeper-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: gatekeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        run: gatekeeper-service
    spec:
      containers:
      - name: gatekeeper-service
        image: keptn/gatekeeper-service:0.6.0.beta2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-service
  namespace: keptn
  labels:
    run: gatekeeper-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: gatekeeper-service
---
## gatekeeper-service: sh.keptn.events.evaluation-done
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-service-evaluation-done-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:0.6.0.beta2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
## helm-service: sh.keptn.event.configuration.change
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-service-configuration-change-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:0.6.0.beta2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
# jmeter-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: jmeter-service
  replicas: 1
  template:
    metadata:
      labels:
        run: jmeter-service
    spec:
      containers:
      - name: helm-service
        image: keptn/jmeter-service:0.6.0.beta2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jmeter-service
  namespace: keptn
  labels:
    run: jmeter-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: jmeter-service
---
## jmeter-service: sh.keptn.events.deployment-finished
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-service-deployment-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:0.6.0.beta2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
