installer/manifests/keptn/continuous-operations.yaml
---
# wait-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wait-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: wait-service
  replicas: 1
  template:
    metadata:
      labels:
        run: wait-service
    spec:
      containers:
      - name: wait-service
        image: keptn/wait-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      serviceAccountName: keptn-default

---
apiVersion: v1
kind: Service
metadata:
  name: wait-service
  namespace: keptn
  labels:
    run: wait-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: wait-service
---
## wait-service: sh.keptn.events.deployment-finished
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wait-service-deployment-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      serviceAccountName: keptn-default
---
# remediation-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remediation-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: remediation-service
  replicas: 1
  template:
    metadata:
      labels:
        run: remediation-service
    spec:
      containers:
      - name: remediation-service
        image: keptn/remediation-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
      serviceAccountName: keptn-default
---
apiVersion: v1
kind: Service
metadata:
  name: remediation-service
  namespace: keptn
  labels:
    run: remediation-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    run: remediation-service
---
## remediation-service: sh.keptn.event.problem.open
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remediation-service-distributor
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: distributor
  replicas: 1
  template:
    metadata:
      labels:
        run: distributor
    spec:
      containers:
      - name: distributor
        image: keptn/distributor:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      serviceAccountName: keptn-default
