installer/manifests/keptn/uniform-services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: gatekeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        run: gatekeeper-service
    spec:
      containers:
      - name: gatekeeper-service
        image: keptn/gatekeeper-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-service
  namespace: keptn
  labels:
    run: gatekeeper-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: gatekeeper-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: github-service
  replicas: 1
  template:
    metadata:
      labels:
        run: github-service
    spec:
      containers:
      - name: github-service
        image: keptn/github-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: github-service
  namespace: keptn
  labels:
    run: github-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: github-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitometer-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: pitometer-service
  replicas: 1
  template:
    metadata:
      labels:
        run: pitometer-service
    spec:
      containers:
      - name: pitometer-service
        image: keptn/pitometer-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pitometer-service
  namespace: keptn
  labels:
    run: pitometer-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: pitometer-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicenow-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: servicenow-service
  replicas: 1
  template:
    metadata:
      labels:
        run: servicenow-service
    spec:
      containers:
      - name: servicenow-service
        image: keptn/servicenow-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: servicenow-service
  namespace: keptn
  labels:
    run: servicenow-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: servicenow-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: helm-service
  replicas: 1
  template:
    metadata:
      labels:
        run: helm-service
    spec:
      containers:
      - name: helm-service
        image: keptn/helm-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helm-service
  namespace: keptn
  labels:
    run: helm-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: helm-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: jmeter-service
  replicas: 1
  template:
    metadata:
      labels:
        run: jmeter-service
    spec:
      containers:
      - name: helm-service
        image: keptn/jmeter-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jmeter-service
  namespace: keptn
  labels:
    run: jmeter-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: jmeter-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipyard-service
  namespace: keptn
spec:
  selector:
    matchLabels:
      run: shipyard-service
  replicas: 1
  template:
    metadata:
      labels:
        run: shipyard-service
    spec:
      containers:
      - name: shipyard-service
        image: keptn/shipyard-service:0b2f023
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shipyard-service
  namespace: keptn
  labels:
    run: shipyard-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: shipyard-service
