installer/manifests/keptn/api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api-ingress
  namespace: keptn
spec:
  tls:
    - hosts:
        - domain.placeholder
      secretName: sslcerts
  rules:
    - host: api.keptn
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 443
