installer/manifests/keptn/keptn-api-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: keptn
spec:
  hosts:
  - "api.keptn.DOMAIN_PLACEHOLDER"
  gateways:
  - keptn-gateway
  http:
    - route:
      - destination:
          host: api.keptn.svc.cluster.local
      websocketUpgrade: true
