installer/manifests/keptn/keptn-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: keptn-ingress
  namespace: keptn
spec:
  tls:
    - hosts:
        - '*.keptn.domain.placeholder'
      secretName: sslcerts
  rules:
    - host: '*.keptn.domain.placeholder'
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 443
    - host: api.keptn
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 443
            path: /
